logs/drx_main_service.log
# Log rotated on Sun  6 Jul 12:00:01 EDT 2025
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
  File "/home/drx/DRX/drx_main.py", line 222
    self.set_status("WX Conditions Report", "Weather Report", summary)    
    ^
IndentationError: expected an indented block after function definition on line 221
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
